--- a/assets/styles/scss/abstracts/_mixins.scss
+++ b/assets/styles/scss/abstracts/_mixins.scss
@@ -4,6 +4,7 @@
 
 // #  Import all mixin
 @import 'mixins/breakpoints';
+@import 'mixins/define-color-hsl';
 @import 'mixins/containers';
 @import 'mixins/responsive-font-sizes';
 @import 'mixins/box-shadows';
