--- a/assets/styles/scss/components/_button.scss
+++ b/assets/styles/scss/components/_button.scss
@@ -9,16 +9,6 @@ button {
 
 // -  <<----------<< Specific >>---------->>
 
-.btn--text {
-  //...
-  &:hover {
-    // box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-    color: var(--background-color);
-  }
-}
-
-
-
 .test-btn--1 {
   @include transition-general;
   @include dimensions(none, fit-content, auto);
@@ -32,25 +22,13 @@ button {
   font-size: $font-size--2;
   font-variant: small-caps;
   text-transform: lowercase;
-
-  &:hover {
-    @include box-shadow(4);
-
-    transform: translateY(2px);
-  }
-
-  &:active {
-    @include box-shadow(2);
-
-    transform: translateY(4px);
-  }
 }
 
 // ----------------------------------------------------------------------------
 
 $height: 65;
 $depth: 6;
-$color: #7fbb98;
+$color: #4676b9;
 $text-color: darken($color, 10%);
 $lighten-on-hover: 7%;
 $button-speed: 0.06;
