--- a/assets/styles/scss/abstracts/mixins/_define-color-hsl.scss
+++ b/assets/styles/scss/abstracts/mixins/_define-color-hsl.scss
@@ -8,22 +8,16 @@
   #{$color}--h: #{$hue};
   #{$color}--s: #{$saturation};
   #{$color}--l: #{$lightness};
-  #{$color}--light: unquote(
-    'hsl(#{$hue}, #{$saturation}, calc(#{$lightness} + 10%))'
-  );
-  #{$color}--lighter: unquote(
-    'hsl(#{$hue}, #{$saturation}, calc(#{$lightness} + 20%))'
-  );
-  #{$color}--lightest: unquote(
-    'hsl(#{$hue}, #{$saturation}, calc(#{$lightness} + 30%))'
-  );
-  #{$color}--dark: unquote(
-    'hsl(#{$hue}, #{$saturation}, calc(#{$lightness} - 10%))'
-  );
-  #{$color}--darker: unquote(
-    'hsl(#{$hue}, #{$saturation}, calc(#{$lightness} - 20%))'
-  );
-  #{$color}--darkest: unquote(
-    'hsl(#{$hue}, #{$saturation}, calc(#{$lightness} - 30%))'
-  );
+  #{$color}--light:
+ unquote('hsl(#{$hue}, #{$saturation}, calc(#{$lightness} + 10%))');
+  #{$color}--lighter:
+ unquote('hsl(#{$hue}, #{$saturation}, calc(#{$lightness} + 20%))');
+  #{$color}--lightest:
+ unquote('hsl(#{$hue}, #{$saturation}, calc(#{$lightness} + 30%))');
+  #{$color}--dark:
+ unquote('hsl(#{$hue}, #{$saturation}, calc(#{$lightness} - 10%))');
+  #{$color}--darker:
+ unquote('hsl(#{$hue}, #{$saturation}, calc(#{$lightness} - 20%))');
+  #{$color}--darkest:
+ unquote('hsl(#{$hue}, #{$saturation}, calc(#{$lightness} - 30%))');
 }
