--- a/assets/styles/scss/themes/_dark.scss
+++ b/assets/styles/scss/themes/_dark.scss
@@ -3,9 +3,9 @@
 \* -------------------------------------------------------------------------- */
 
 [data-theme='dark'] {
-  --foreground-color: hsl(240, 100%, 99%);
-  --background-color: hsl(240, 100%, 10%);
-  --primary-color: hsl(27, 48%, 86%);
-  --secondary-color: hsl(34, 42%, 36%);
-  --tertiary-color: hsl(203, 42%, 36%);
+  --color-foreground--hsl: hsl(240, 100%, 99%);
+  --color-background--hsl: hsl(240, 100%, 10%);
+  --color-primary--hsl: hsl(27, 48%, 86%);
+  --color-secondary--hsl: hsl(34, 42%, 36%);
+  --color-tertiary--hsl: hsl(203, 42%, 36%);
 }
