--- a/assets/styles/scss/components/_button.scss
+++ b/assets/styles/scss/components/_button.scss
@@ -16,9 +16,9 @@ button {
 
   padding: $filler--xs;
   border: 0;
-  background-color: var(--tertiary-color);
+  background-color: var(--color-tertiary--hsl);
   border-radius: $border-radius--xs;
-  color: var(--primary-color);
+  color: var(--color-primary--hsl);
   font-size: $font-size--2;
   font-variant: small-caps;
   text-transform: lowercase;
