--- a/assets/styles/scss/themes/_light.scss
+++ b/assets/styles/scss/themes/_light.scss
@@ -4,15 +4,6 @@
 
 :root,
 [data-theme='light'] {
-  // -  <<----------<< Foreground Colors >>---------->>
-
-  /* #  Main */
-  --foreground-color: #003; // -  deep-dark-blue
-  --background-color: #f8f8ff; // -  off-white
-  --primary-color: #022e51; // -  dark-mid-blue
-  --secondary-color: #4676b9; // -  light-mid-blue
-  --tertiary-color: #b78846; // -  mid-goldbrown
-
   // -  <<----------<< Background Colors >>---------->>
 
   /*  #  Transparant */
@@ -28,18 +19,18 @@
 
   /* #  Main */
 
-  // #003
+  // #003 - deep-dark-blue
   @include define-color-hsl(--color-foreground, 240, 100%, 10%);
 
-  // #f8f8ff
+  // #f8f8ff - off-white
   @include define-color-hsl(--color-background, 240, 100%, 99%);
 
-  // #022e51
+  // #022e51 - dark-mid-blue
   @include define-color-hsl(--color-primary, 207, 95%, 16%);
 
-  // #4676b9
+  // #4676b9 - light-mid-blue
   @include define-color-hsl(--color-secondary, 215, 45%, 50%);
 
-  // #b78846
+  // #b78846 - mid-goldbrown
   @include define-color-hsl(--color-tertiary, 35, 45%, 50%);
 }
