--- a/assets/styles/scss/components/_button.scss
+++ b/assets/styles/scss/components/_button.scss
@@ -26,13 +26,112 @@ button {
 
 // ----------------------------------------------------------------------------
 
+// $height: 65;
+// $depth: 6;
+// $color: #4676b9;
+// $text-color: darken($color, 10%);
+// $lighten-on-hover: 7%;
+// $button-speed: 0.06;
+// $timing-function: ease-out;
+
+// .button {
+//   position: relative;
+//   top: 0;
+//   display: inline-block;
+//   width: auto;
+//   height: $height + px;
+//   box-sizing: border-box;
+//   padding: 0 (($height/2) + px);
+//   border-top: 1px solid lighten($color, 22%);
+//   border-bottom: 1px solid lighten($color, 20%);
+//   margin-bottom: 15px;
+//   margin-left: 5px;
+//   background: linear-gradient(
+//     to bottom,
+//     saturate(lighten($color, 15%), 35%) 0%,
+//     saturate(lighten($color, 12%), 15%) 26%,
+//     $color 100%
+//   );
+//   border-radius: 5px;
+//   color: $text-color;
+//   cursor: pointer;
+//   font-family: Helvetica, Arial, sans-serif;
+//   font-size: 2em;
+//   font-weight: bold;
+//   line-height: $height + px;
+//   text-decoration: none;
+//   text-shadow: 0 -2px 0 darken($color, 20%), 0 1px 1px lighten($color, 20%);
+//   transition: all ($button-speed + s) $timing-function;
+
+//   &:visited {
+//     color: $text-color;
+//   }
+// }
+
+// .button:hover {
+//   background: linear-gradient(
+//     to bottom,
+//     lighten(saturate(lighten($color, 15%), 35%), $lighten-on-hover) 0%,
+//     lighten(saturate(lighten($color, 12%), 15%), $lighten-on-hover) 26%,
+//     lighten($color, $lighten-on-hover) 100%
+//   );
+// }
+
+// .button:active {
+//   top: $depth + px;
+//   color: lighten($color, 45%);
+//   text-shadow: 0 -2px 0 darken($color, 0%), 0 1px 1px lighten($color, 20%),
+//     0 0 4px white;
+
+//   &::before {
+//     top: 0;
+//     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.7), 0 3px 9px rgba(0, 0, 0, 0.2);
+//   }
+// }
+
+// .button::before {
+//   position: absolute;
+//   z-index: -1;
+//   top: ($depth) + px;
+//   right: 0;
+//   left: 0;
+//   display: inline-block;
+//   height: ($height) + px;
+//   background: linear-gradient(
+//     to top,
+//     saturate(darken($color, 40%), 15%) 0%,
+//     saturate(darken($color, 25%), 10%) $depth + px
+//   );
+//   border-radius: 5px;
+//   box-shadow: 0 1px 0 2px rgba(0, 0, 0, 0.3),
+//     0 5px ($depth * 0.4 + px) rgba(0, 0, 0, 0.5),
+//     0 ($depth * 1.8 + px) 9px rgba(0, 0, 0, 0.2);
+//   content: '';
+//   transition: all (($button-speed * 1.3) + s) $timing-function;
+// }
+
 $height: 65;
 $depth: 6;
-$color: #4676b9;
+$color: #7fbb98;
 $text-color: darken($color, 10%);
 $lighten-on-hover: 7%;
 $button-speed: 0.06;
 $timing-function: ease-out;
+
+body,
+html {
+  height: 100%;
+  margin: 0;
+}
+
+body {
+  display: flex;
+  background: #d7702b;
+}
+
+.container {
+  margin: auto;
+}
 
 .button {
   position: relative;
@@ -46,14 +145,13 @@ $timing-function: ease-out;
   border-bottom: 1px solid lighten($color, 20%);
   margin-bottom: 15px;
   margin-left: 5px;
-  background: linear-gradient(
-    to bottom,
+  background:
+    linear-gradient(to bottom,
     saturate(lighten($color, 15%), 35%) 0%,
     saturate(lighten($color, 12%), 15%) 26%,
-    $color 100%
-  );
+    $color 100%);
   border-radius: 5px;
-  color: $text-color;
+  color: var(--color-secondary--darken);
   cursor: pointer;
   font-family: Helvetica, Arial, sans-serif;
   font-size: 2em;
@@ -64,23 +162,24 @@ $timing-function: ease-out;
   transition: all ($button-speed + s) $timing-function;
 
   &:visited {
-    color: $text-color;
+    color: var(--color-secondary--darken);
   }
 }
 
 .button:hover {
-  background: linear-gradient(
-    to bottom,
+  background:
+    linear-gradient(to bottom,
     lighten(saturate(lighten($color, 15%), 35%), $lighten-on-hover) 0%,
     lighten(saturate(lighten($color, 12%), 15%), $lighten-on-hover) 26%,
-    lighten($color, $lighten-on-hover) 100%
-  );
+    lighten($color, $lighten-on-hover) 100%);
 }
 
 .button:active {
   top: $depth + px;
   color: lighten($color, 45%);
-  text-shadow: 0 -2px 0 darken($color, 0%), 0 1px 1px lighten($color, 20%),
+  text-shadow:
+    0 -2px 0 darken($color, 0%),
+    0 1px 1px lighten($color, 20%),
     0 0 4px white;
 
   &::before {
@@ -97,13 +196,13 @@ $timing-function: ease-out;
   left: 0;
   display: inline-block;
   height: ($height) + px;
-  background: linear-gradient(
-    to top,
+  background:
+    linear-gradient(to top,
     saturate(darken($color, 40%), 15%) 0%,
-    saturate(darken($color, 25%), 10%) $depth + px
-  );
+    saturate(darken($color, 25%), 10%) $depth + px);
   border-radius: 5px;
-  box-shadow: 0 1px 0 2px rgba(0, 0, 0, 0.3),
+  box-shadow:
+    0 1px 0 2px rgba(0, 0, 0, 0.3),
     0 5px ($depth * 0.4 + px) rgba(0, 0, 0, 0.5),
     0 ($depth * 1.8 + px) 9px rgba(0, 0, 0, 0.2);
   content: '';
